# IC

./: .gitignore
CUDA/: CaRU.cu  CaRU.h  Myocyte.cu  Myocyte.h
CUDA/CUDA Tutorial/Tutorial 01/: vector_add  vector_add.c  vector_add.cu
CUDA/CUDA Tutorial/Tutorial 02/: vector_add_grid  vector_add_grid.cu  vector_add_thread  vector_add_thread.cu
CUDA/CUDA by Example/Chapter 3/: a.out  a_kernel_call.cu  device_properties.cu  device_query.cu  hello_world.cu  passing_parameters.cu
CUDA/CUDA by Example/Chapter 4/: a.out  julia_gpu.cu  vector_sum.cu
CUDA/CUDA by Example/Chapter 5/: a.out  animation.cu  dot_product.cu  shared_memory_bitmap.cu  vector_sum_redux.cu
CUDA/doutorado_final-cuda/: main.cu
CUDA/doutorado_final-cuda/header/: CaRU.h
CUDA/doutorado_final-cuda/src/: CaRU.cu  Myocyte.cu
CUDA/doutorado_final_cuda/: .gitignore  CMakeLists.txt  main.cu
CUDA/doutorado_final_cuda/header/: CaRU.h  Myocyte.h
CUDA/doutorado_final_cuda/src/: CaRU.cu  Myocyte.cu
IC/: testes.sh
MPI/doutorado_final-mpi/: CMakeLists.txt  main.cpp
MPI/doutorado_final-mpi/genFigs/: histogram_sum.py
MPI/doutorado_final-mpi/header/: CaRU.h  Myocyte.h
MPI/doutorado_final-mpi/src/: CaRU.cpp  Myocyte.cpp
MPI/helloworld/: CMakeLists.txt  helloworld.cpp
MPI/matrix_det/: CMakeLists.txt  main.cpp
MPI/matrix_det/src/: Mult.cpp
MPI/matrix_multiply/: CMakeLists.txt  main.cpp
MPI/matrix_multiply/include/: Mult.h
OPENMP/doutorado_final_openmp/: main.cpp  todo
OPENMP/doutorado_final_openmp/genFigs/: avgStd.py  boxplot.py  histogram_lcc.py  irelSparks.py  readData.py
OPENMP/doutorado_final_openmp/header/: Myocyte.h
OPENMP/doutorado_final_openmp/src/: Myocyte.cpp
OPENMP/examples/: host_teams.1.c  parallel1.c  ploop.1.c
OPENMP/matrix_det/: CMakeLists.txt  main.cpp
OPENMP/matrix_det/src/: matrix2D.cpp
OPENMP/matrix_multiply/: CMakeLists.txt  main.cpp
OPENMP/matrix_multiply/include/: matrix2D.h
doutorado_final/: CMakeLists.txt  main.cpp
doutorado_final/genFigs/: histogram_ryr.py
doutorado_final/header/: Myocyte.h
doutorado_final/src/: Myocyte.cpp
doutorado_final_serial/: CMakeLists.txt  main.cpp
doutorado_final_serial/genFigs/: calcIrelSum.py
doutorado_final_serial/header/: Myocyte.h
doutorado_final_serial/src/: CaRU.cpp  Myocyte.cpp
